# python-rev

./: .gitmodules  LICENSE  README.md
doc/: architecture.md  decisions.md  progress.md  rev-console.md
rev-console/: README.md  pyproject.toml
rev-console/rev_console/: __main__.py  app.py  commands.py  history.py  log_writer.py  widgets.py
rev-core/: README.md  pyproject.toml
rev-core/rev_core/: __init__.py  bulk_input_data.py  closed_loop_control_algorithm.py  debug_group.py  digital_channel_direction.py  digital_state.py  discovered_addresses.py  expansion_hub.py  i2c_read_status.py  i2c_speed_code.py  i2c_write_status.py  led_pattern.py  module_interface.py  module_status.py  motor_mode.py  pid_coefficients.py  pidf_coefficients.py  rev_hub.py  rev_hub_type.py  rgb.py  verbosity_level.py  version.py
rev-core/rev_core/general_errors/: __init__.py  hub_not_responding_error.py  no_expansion_hub_with_address_error.py  rev_hub_error.py  serial_errors.py  timeout_error.py
rev-core/rev_core/nack_errors/: __init__.py  battery_too_low_error.py  diagnostic_errors.py  digital_channel_errors.py  i2c_errors.py  motor_errors.py  nack_code.py  nack_code_to_error.py  nack_error.py  parameter_out_of_range_error.py  servo_errors.py  unrecognized_nack_error.py
rev-distance-sensor/: README.md  pyproject.toml
rev-distance-sensor/rev_distance_sensor/: __init__.py  distance_sensor.py  i2c_utils.py  registers.py
rev-distance-sensor/rev_distance_sensor/drivers/: distance_sensor_driver.py  vl53l0x.py
rev-expansion-hub/: README.md  pyproject.toml
rev-expansion-hub/rev_expansion_hub/: __init__.py  discovery.py  open_rev_hub.py  start_keep_alive.py
rev-expansion-hub/rev_expansion_hub/errors/: __init__.py  rhsp_lib_error.py
rev-expansion-hub/rev_expansion_hub/internal/: error_conversion.py  expansion_hub.py
rev-hub-cli/: README.md  pyproject.toml
rev-hub-cli/rev_hub_cli/: __init__.py  __main__.py  hub_stringify.py
rev-hub-cli/rev_hub_cli/command/: analog.py  bulk_input.py  digital.py  distance.py  error.py  failsafe.py  firmware_version.py  led.py  log.py  motor.py  query.py  servo.py
rev-rhsplib/: CMakeLists.txt  README.md  pyproject.toml
rev-rhsplib/rev_rhsplib/: __init__.py  _rev_rhsplib.pyi
rev-rhsplib/src/: _rev_rhsplib.cpp
