[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rev-core"
version = "1.2.0"
description = "Common interfaces and data types for REV Robotics hub devices"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["mypy", "ruff"]


[tool.mypy]
python_version = "3.12"
strict = true
