[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rev-distance-sensor"
version = "1.1.2"
description = "REV 2m Distance Sensor (VL53L0X) driver for REV Expansion Hubs"
requires-python = ">=3.12"
dependencies = ["rev-core", "rev-expansion-hub"]

[tool.setuptools.packages.find]
where = ["."]
include = ["rev_distance_sensor*"]
