[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rev-expansion-hub"
version = "1.1.2"
description = "High-level asyncio API for REV Robotics Expansion Hubs"
requires-python = ">=3.12"
dependencies = ["rev-core", "rev-rhsplib", "pyserial>=3.5"]

[project.optional-dependencies]
dev = ["mypy", "ruff"]


[tool.mypy]
python_version = "3.12"
strict = true

